--- a/paywiz-master/other_layouts/transaction-info.html
+++ b/paywiz-master/other_layouts/transaction-info.html
@@ -34,7 +34,7 @@
     
         <div class="media-body">
           <div class="media">
-         <img class="profile-image" src="/src/assets/img/done.png" alt="Generic placeholder image mr-7" height="10" width="20">
+         <img id="sender_photo" class="profile-image" src="/src/assets/img/done.png" alt="Generic placeholder image mr-7" height="10" width="20">
             <div class="join-in">
             <h5 id="sender_fullname" class="uk-margin-remove-top">NaN</h5>
             <img class="sender-icon" src="/src/assets/img/senderIcon.png" alt="">
@@ -55,7 +55,7 @@
           <div class="media">
          <img  id="receiver_photo" class="profile-image" src="NaN" height="10" width="20">
              <div class="join-in">
-            <h5 id="receiver_contactNumber" class="uk-margin-remove-top">NaN</h5>
+            <h5 id="receiver_fullname" class="uk-margin-remove-top">NaN</h5>
             <img class="sender-icon" src="/src/assets/img/receiverIcon.png" alt="">
             </div>
             <img class="location-icon" src="/src/assets/img/phoneIcon.png" alt="">
